gcc/testsuite/rust/rustc/ui/issues/issue-68000-unicode-ident-after-missing-comma.rs
pub struct Foo {
    pub bar: Vec<i32>รถ
// { dg-error "" "" { target *-*-* } .-1 }
} // { dg-error "" "" { target *-*-* } }

fn main() {}

